k8s/03-apps/gitea/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-svc
  namespace: rt
spec:
  ports:
    - name: gitea
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: gitea
